// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`server mutations > invite user no permission 1`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "You do not have permission to call this method",
      "path": [
        "inviteUser",
      ],
    },
  ],
}
`;

exports[`server mutations > set default world no permission 1`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "You do not have permission to call this method",
      "path": [
        "setDefaultWorld",
      ],
    },
  ],
}
`;

exports[`server mutations > with authenticated user > invite user 1`] = `
{
  "data": {
    "inviteUser": {
      "_id": Any<String>,
      "email": "new-user@example.com",
    },
  },
  "errors": undefined,
}
`;

exports[`server mutations > with authenticated user > set default world 1`] = `
{
  "data": {
    "setDefaultWorld": {
      "_id": Any<String>,
      "defaultWorld": {
        "_id": Any<String>,
        "name": Any<String>,
        "wikiPage": {
          "_id": Any<String>,
        },
      },
    },
  },
  "errors": undefined,
}
`;

exports[`server mutations > with locked server > unlock 1`] = `
{
  "data": {
    "unlockServer": true,
  },
  "errors": undefined,
}
`;

exports[`server mutations > with locked server > unlock twice 1`] = `
{
  "data": {
    "unlockServer": true,
  },
  "errors": undefined,
}
`;

exports[`server mutations > with locked server > unlock twice 2`] = `
{
  "data": {
    "unlockServer": null,
  },
  "errors": [
    {
      "extensions": {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "Server already unlocked!",
      "path": [
        "unlockServer",
      ],
    },
  ],
}
`;
